--- a/JS/index.html
+++ b/JS/index.html
@@ -9,5 +9,7 @@
 <body>
   <h1>sallam</h1>
   <script src="functions.js"></script>
+  <script src="A Few Miscellaneous JS Features.js"></script>
+
 </body>
 </html>
