--- a/JS/index.html
+++ b/JS/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Javascript</title>
-  <script src="app.js"></script>
-</head>
-<body>
-  <h1>sallam</h1>
-  <script src="functions.js"></script>
-  <script src="A Few Miscellaneous JS Features.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My First Javascript</title>
+    <script src="app.js"></script>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <h1 class="header">My Webpage</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore similique
+      ab voluptates earum rerum praesentium laboriosam tempore ullam iure fugit
+      dignissimos, natus reprehenderit, possimus repellendus officia reiciendis
+      animi voluptatum illo?
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore similique
+      ab voluptates earum rerum praesentium laboriosam tempore ullam iure fugit
+      dignissimos, natus reprehenderit, possimus repellendus officia reiciendis
+      animi voluptatum illo?
+    </p>
 
-</body>
+    <form action="">
+      <input type="text" placeholder="Bear Name" />
+      <input type="password" placeholder="Password" />
+      <input type="submit" />
+    </form>
+    <p class="special">ALSDKFJLAKSJDFKSJFDL</p>
+    <ul>
+      <li class="special">First Thing</li>
+      <li>Second Thing</li>
+      <li class="special">Third Thing</li>
+    </ul>
+
+    <script src="functions.js"></script>
+    <script src="A Few Miscellaneous JS Features.js"></script>
+  </body>
 </html>
