The other projects upload

--- a/Drawing Animations/index.html
+++ b/Drawing Animations/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Stop Watch</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
